# gsi-dem-converter

./: README.md  example_python.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/gsi-dem-converter/: __init__.py  parser.py
src/gsi-dem-converter/cli/: main.py
src/gsi_dem_converter/: core.py  io_gdal.py  parser.py  utils.py
src/gsi_dem_converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
